# studia-level-2

./: .gitignore  Readme.md
AI/lista-1/: lista1.ipynb
AI/lista-5/: lab5.ipynb
AI/lista-6/: lab6.ipynb
Algorytmika/: Readme.md
Algorytmika/ zadanie-10/: Readme.md  main.py
Algorytmika/zadanie-1/: Readme.md  zadanie.md
Algorytmika/zadanie-10/: Readme.md  main.py
Algorytmika/zadanie-11/: Readme.md
Algorytmika/zadanie-12/: main.py
Algorytmika/zadanie-13/: Readme.md  main.py
Algorytmika/zadanie-14/: Readme.md  main.py
Algorytmika/zadanie-15/: Readme.md
Algorytmika/zadanie-16/: Readme.md  main.py
Algorytmika/zadanie-17/: Readme.md  main.py
Algorytmika/zadanie-18/: Readme.md  main.py
Algorytmika/zadanie-19/: Readme.md  main.py
Algorytmika/zadanie-2/: Readme.md  part1.c  part2.py
Algorytmika/zadanie-20/: Readme.md  main.py
Algorytmika/zadanie-3/: Readme.md  main.c  main.py
Algorytmika/zadanie-4/: Readme.md  main.c
Algorytmika/zadanie-5/: Readme.md  main.py
Algorytmika/zadanie-6/: Readme.md  main.py
Algorytmika/zadanie-7/: Readme.md  main.py
Algorytmika/zadanie-8/: Readme.md  main.py
Algorytmika/zadanie-9/: Readme.md  main.py
BigData/zadanie1/: zadanie1.md
BigData/zadanie18/: main.py  zadanie18.md
BigData/zadanie2/: main.py  zadanie2.md
BigData/zadanie21/: main.py
BigData/zadanie8/: main.py  zadanie8.md
Krypto/lista1-md5/: meson.build
Krypto/lista1-md5/zadanie3/: meson.build
Optymalizacja/lista-1/zad-1/: Readme.md  (+1 more)
Optymalizacja/lista-3/: main.jl  plots.py  zadanie.md
online/lista1/: main.py
online/lista5/: main.py
(+89 files in other folders)
